# keym-rust

./: CHANGES.md  Cargo.toml  README.md  config.toml
editor/: Cargo.toml  tauri.conf.json
editor/src/: main.rs
runner/: Cargo.toml
runner/src/: main.rs
shared/: Cargo.toml
shared/src/: config.rs  input.rs  lib.rs  mutex_file.rs  scancode.rs
src/: main.rs
src/core/: input.rs  mod.rs  scancode.rs
ui/: app.js  styles.css
