[workspace]
members = ["runner", "editor", "shared"]
resolver = "2"

[workspace.dependencies]
windows = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
    "Win32_Security",
]}
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
lazy_static = "1.5"
spin_sleep = "1.2"
parking_lot = "0.12"
native-windows-gui = "1.0.13"
native-windows-derive = "1.0.5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = 'abort'