[package]
name = "keym-editor"
version = "0.2.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
shared = { path = "../shared" }
tauri.workspace = true
serde.workspace = true
serde_json.workspace = true

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
